--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
         <tbody id="loc-equip-body"></tbody>
       </table>
     </div>
+    <div id="tr-equipment" hidden></div>
+     <div id="tr-ammo" hidden></div>
   </section>
 
   <!-- Lore & History -->
