--- a/index.html
+++ b/index.html
@@ -410,6 +410,59 @@
     </div>
   </div>
 
+<!-- Filter / Find Mechs -->
+<div id="filter-modal" class="modal" role="dialog" aria-modal="true" aria-labelledby="filter-title" hidden>
+  <div class="modal-card" role="document">
+    <header class="modal-h">
+      <h2 id="filter-title">Filter Mechs</h2>
+      <button id="filter-close" class="icon-btn" aria-label="Close">✕</button>
+    </header>
+    <div class="modal-c small">
+      <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;">
+        <div>
+          <label class="dim">Tech Base</label>
+          <select id="f-tech" class="gtr-sel">
+            <option value="">Any</option>
+            <option>Inner Sphere</option>
+            <option>Clan</option>
+          </select>
+        </div>
+
+        <div>
+          <label class="dim">Weight Class</label>
+          <div style="display:flex;gap:6px;flex-wrap:wrap;">
+            <label class="chk"><input type="checkbox" id="f-class-L" /> Light</label>
+            <label class="chk"><input type="checkbox" id="f-class-M" /> Medium</label>
+            <label class="chk"><input type="checkbox" id="f-class-H" /> Heavy</label>
+            <label class="chk"><input type="checkbox" id="f-class-A" /> Assault</label>
+          </div>
+        </div>
+
+        <div>
+          <label class="chk"><input type="checkbox" id="f-jump" /> Can Jump</label>
+        </div>
+
+        <div>
+          <label class="dim">Min Walk (MP)</label>
+          <input id="f-minwalk" class="gtr-in tiny" type="number" min="0" step="1" placeholder="Any" />
+        </div>
+
+        <div style="grid-column:1 / -1;">
+          <label class="dim">Role tokens (comma-separated)</label>
+          <input id="f-roles" class="gtr-sel" type="text" placeholder="e.g. brawler, sniper, skirmisher" />
+        </div>
+      </div>
+      <div class="dim small" style="margin-top:8px;">
+        Filters apply to the search list. Use the search box to narrow further.
+      </div>
+    </div>
+    <footer class="modal-f" style="display:flex;gap:8px;justify-content:flex-end;">
+      <button id="filter-clear" class="btn ghost sm">Clear</button>
+      <button id="filter-apply" class="btn sm">Apply</button>
+    </footer>
+  </div>
+</div>
+
   <!-- Toast (used by script.js) -->
   <div id="toast" class="toast" hidden></div>
 
