--- a/index.html
+++ b/index.html
@@ -342,12 +342,10 @@
       <div class="gtr-title">Dice & Target Number</div>
       <div class="gtr-roller" style="margin-bottom:8px;">
         <select class="gtr-sel tiny" id="roll-att-dice" aria-label="Attacker dice">
-          <option>2d6</option><option>1d6</option><option>1d8</option><option>1d10</option><option>1d20</option>
+          <option>2d6</option><option>1d6</option>
         </select>
         <input class="gtr-in tiny" id="roll-att-mod" type="number" value="0" aria-label="Attacker modifier">
-        <button class="icon-btn" id="btn-roll-att" title="Roll attacker">
-          <svg viewBox="0 0 24 24" width="14" height="14" aria-hidden="true"><rect x="3" y="3" width="18" height="18" rx="3"/><circle cx="8" cy="8" r="1"/><circle cx="16" cy="8" r="1"/><circle cx="8" cy="16" r="1"/><circle cx="16" cy="16" r="1"/></svg>
-        </button>
+        <span>=</span>
         <div class="result-badge" id="roll-att-res" aria-live="polite">—</div>
       </div>
 
@@ -356,7 +354,7 @@
           <div>Target Number</div>
           <div id="gtr-total" class="tn tn-auto">Auto</div>
         </div>
-        <button class="ghost-btn" id="btn-roll-both" title="Roll both (R)">roll both</button>
+        <button class="ghost-btn" id="btn-roll-both" title="Roll both (R)">Roll</button>
       </div>
     </div>
   </section>
