--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
       </div>
       <div class="topbar-right actions actions--top">
         <button id="btn-load-mech"   class="btn"       title="Load a mech JSON">Load</button>
-        <button id="btn-custom-mech" class="btn ghost" title="Open Custom Builder">Custom</button>
-        <button id="btn-import"      class="btn ghost" title="Import session JSON" aria-label="Import">Import</button>
-        <button id="btn-export"      class="btn ghost" title="Export session JSON" aria-label="Export">Export</button>
+<button id="btn-custom-mech" class="btn ghost" title="Open Custom Builder" aria-label="Filter">
+  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentColor" style="vertical-align:middle; margin-right:4px;">
+    <path d="M3 4h18l-7 8v6l-4 2v-8z"/>
+  </svg>
+  Filter
+</button>
+<button id="btn-import" class="btn ghost" title="Import session JSON" aria-label="Import">⬇</button>
+<button id="btn-export" class="btn ghost" title="Export session JSON" aria-label="Export">⬆</button>
+
 
         <div class="divider"></div>
 
