--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div class="divider"></div>
 
-        <button id="btn-load-manifest" class="btn" title="Fetch manifest.json">Manifest</button>
+        <button id="btn-load-manifest" class="btn" title="Fetch manifest.json">📄</button>
 
         <!-- ▼ Search mounts here (JS inserts input next to this button) -->
 
