--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <path d="M3 4h18l-7 8v6l-4 2v-8z"/>
   </svg>
 </button>
-<button id="btn-import" class="btn ghost" title="Import session JSON" aria-label="Import">⬇</button>
-<button id="btn-export" class="btn ghost" title="Export session JSON" aria-label="Export">⬆</button>
+<button id="btn-import" class="btn icon ghost" title="Import session JSON" aria-label="Import">⬇</button>
+<button id="btn-export" class="btn icon ghost" title="Export session JSON" aria-label="Export">⬆</button>
 
+<div class="divider"></div>
 
-        <div class="divider"></div>
+<button id="btn-load-manifest" class="btn icon" title="Fetch manifest.json">📄</button>
 
-        <button id="btn-load-manifest" class="btn" title="Fetch manifest.json">📄</button>
+<!-- ▼ Search mounts here (JS inserts input next to this button) -->
 
-        <!-- ▼ Search mounts here (JS inserts input next to this button) -->
+<button id="btn-settings" class="btn icon ghost" title="Settings (About & Attribution)">⚙</button>
 
-        <button id="btn-settings" class="btn ghost" title="Settings (About & Attribution)">⚙</button>
       </div>
     </header>
 
