--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <div class="gtr-col">
       <div class="gtr-title"><span class="dot dot-att"></span> Gunnery</div>
       <label class="gtr-lab">Gunnery</label>
-      <select class="gtr-sel" id="gtr-gunnery-sel" aria-label="Gunnery [Ultra Elite 1 ↔ 6 Ultra Green]">
+      <select class="gtr-sel" id="gtr-gunnery-sel" aria-label="Gunnery [Ultra Elite 1 <-> 6 Ultra Green]">
         <option value="1">1-Ultra Elite</option><option value="2">2-Elite</option><option value="3">3-Veteran</option>
         <option value="4" selected>4-Recruit</option><option value="5">5-Green</option><option value="6">6-Ultra Green</option>
       </select>
