--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
           <tr><th>Location</th><th>Armor</th><th>Rear</th><th>Internal</th></tr>
         </thead>
         <tbody>
-          <tr><td>Head</td>          <td id="ar-HD">—</td>  <td>—</td>             <td id="in-HD">—</td></tr>
-          <tr><td>Center Torso</td>  <td id="ar-CT">—</td>  <td id="ar-RTC">—</td> <td id="in-CT">—</td></tr>
-          <tr><td>Right Torso</td>   <td id="ar-RT">—</td>  <td id="ar-RTR">—</td> <td id="in-RT">—</td></tr>
-          <tr><td>Left Torso</td>    <td id="ar-LT">—</td>  <td id="ar-RTL">—</td> <td id="in-LT">—</td></tr>
-          <tr><td>Right Arm</td>     <td id="ar-RA">—</td>  <td>—</td>             <td id="in-RA">—</td></tr>
-          <tr><td>Left Arm</td>      <td id="ar-LA">—</td>  <td>—</td>             <td id="in-LA">—</td></tr>
-          <tr><td>Right Leg</td>     <td id="ar-RL">—</td>  <td>—</td>             <td id="in-RL">—</td></tr>
-          <tr><td>Left Leg</td>      <td id="ar-LL">—</td>  <td>—</td>             <td id="in-LL">—</td></tr>
+          <tr><td>Head [2|12]</td>          <td id="ar-HD">—</td>  <td>—</td>             <td id="in-HD">—</td></tr>
+          <tr><td>Center Torso [7]</td>  <td id="ar-CT">—</td>  <td id="ar-RTC">—</td> <td id="in-CT">—</td></tr>
+          <tr><td>Right Torso [6]</td>   <td id="ar-RT">—</td>  <td id="ar-RTR">—</td> <td id="in-RT">—</td></tr>
+          <tr><td>Left Torso [8]</td>    <td id="ar-LT">—</td>  <td id="ar-RTL">—</td> <td id="in-LT">—</td></tr>
+          <tr><td>Right Arm [3|4]</td>     <td id="ar-RA">—</td>  <td>—</td>             <td id="in-RA">—</td></tr>
+          <tr><td>Left Arm [10|11]</td>      <td id="ar-LA">—</td>  <td>—</td>             <td id="in-LA">—</td></tr>
+          <tr><td>Right Leg [5]</td>     <td id="ar-RL">—</td>  <td>—</td>             <td id="in-RL">—</td></tr>
+          <tr><td>Left Leg [9]</td>      <td id="ar-LL">—</td>  <td>—</td>             <td id="in-LL">—</td></tr>
         </tbody>
       </table>
     </div>
