--- a/index.html
+++ b/index.html
@@ -430,7 +430,15 @@
             <option>Clan</option>
           </select>
         </div>
-
+<label>Rules Level
+  <select id="f-rules">
+    <option value="">Any</option>
+    <option value="1">Intro (1)</option>
+    <option value="2">Tournament (2)</option>
+    <option value="3">Advanced (3)</option>
+    <option value="4">Experimental (4)</option>
+  </select>
+</label>
         <div>
           <label class="dim">Weight Class</label>
           <div style="display:flex;gap:6px;flex-wrap:wrap;">
