--- a/index.html
+++ b/index.html
@@ -430,15 +430,16 @@
             <option>Clan</option>
           </select>
         </div>
-<label>Rules Level
-  <select id="f-rules">
+<div>
+  <label class="dim">Rules Level</label>
+  <select id="f-rules" class="gtr-sel">
     <option value="">Any</option>
-    <option value="1">Intro (1)</option>
-    <option value="2">Tournament (2)</option>
-    <option value="3">Advanced (3)</option>
-    <option value="4">Experimental (4)</option>
+    <option value="1">Introductory (Level 1)</option>
+    <option value="2">Standard (Level 2)</option>
+    <option value="3">Advanced (Level 3)</option>
+    <option value="4">Experimental (Level 4)</option>
   </select>
-</label>
+</div>
         <div>
           <label class="dim">Weight Class</label>
           <div style="display:flex;gap:6px;flex-wrap:wrap;">
