--- a/index.html
+++ b/index.html
@@ -474,6 +474,59 @@
   </div>
 </div>
 
+<div style="grid-column:1 / -1;">
+  <label class="dim">Source</label>
+  <select id="f-source" class="gtr-sel">
+    <option value="">Any</option>
+    <option>BattleTech Dossiers: The Bounty Hunter</option>
+    <option>Mercenaries Supplemental II</option>
+    <option>Rec Guide:ilClan #3</option>
+    <option>Record Sheets: 3067 Unabridged</option>
+    <option>Record Sheets: 3075</option>
+    <option>Record Sheets: 3085 Unabridged - Cutting Edge</option>
+    <option>Record Sheets: 3085 Unabridged - Old is the New New</option>
+    <option>Record Sheets: 3085 Unabridged - Project Phoenix</option>
+    <option>Record Sheets: 3085 Unabridged — Project Phoenix</option>
+    <option>Record Sheets: 3145 New Tech New Upgrades</option>
+    <option>Record Sheets: 3150</option>
+    <option>Record Sheets: Clan Invasion</option>
+    <option>Record Sheets: Record Sheets: 3067 Unabridged</option>
+    <option>Rhonda's Irregulars</option>
+    <option>Starterbook: Sword and Dragon</option>
+    <option>Starterbook: Wolf & Blake</option>
+    <option>TRO 3060</option>
+    <option>TRO: 3039</option>
+    <option>TRO: 3050</option>
+    <option>TRO: 3055</option>
+    <option>TRO: 3058</option>
+    <option>TRO: 3060</option>
+    <option>TRO: 3067</option>
+    <option>TRO: 3067U</option>
+    <option>TRO: 3075</option>
+    <option>TRO: 3085</option>
+    <option>TRO: 3085u</option>
+    <option>TRO: 3145</option>
+    <option>TRO: 3145 Capellan Confederation</option>
+    <option>TRO: 3145 Draconis Combine</option>
+    <option>TRO: 3145 Federated Suns</option>
+    <option>TRO: 3145 Free Worlds League</option>
+    <option>TRO: 3145 Lyran Commonwealth</option>
+    <option>TRO: 3145 Mercenaries</option>
+    <option>TRO: 3145 NTNU</option>
+    <option>TRO: 3145 Republic of the Sphere</option>
+    <option>TRO: 3145 The Clans</option>
+    <option>TRO: 3150</option>
+    <option>TRO: Clan Invasion</option>
+    <option>TRO: Dark Age</option>
+    <option>TRO: Jihad</option>
+    <option>TRO: Project Phoenix</option>
+    <option>TRO: Succession Wars</option>
+    <option>Unbound</option>
+    <option>XTR: Primitives I</option>
+  </select>
+</div>
+
+        
       </div>
       <div class="dim small" style="margin-top:8px;">
         Filters apply to the search list. Use the search box to narrow further.
